project button icon alignment fixing & project sub heading position fix

--- a/src/components/Project.css
+++ b/src/components/Project.css
@@ -64,7 +64,7 @@
 .sub-description-group {
   font-size: 0.4em;
   line-height: 10px;
-  width: 50%;
+  width: 80%;
 }
 
 @media (min-width: 1000px) {
